<resources>
    <string name="app_name">SpotThatFire</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="gps_prompt">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="location_title_prompt">Location is not enabled</string>
    <string name="tracking">Tracking</string>
    <string name="wind">WIND</string>
    <string name="humidity">HUMIDITY</string>
    <string name="rain">RAIN</string>
    <string name="zero">0</string>
    <string name="clear">CLEAR</string>
    <string name="unset">-</string>
    <string name="report">REPORT</string>

</resources>
