<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b"
    android:padding="30dp"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/temp_textView"
            android:text="@string/zero"
            android:textSize="64sp"
            android:fontFamily="cursive"
            style="@style/weather_header" />
        <TextView
            android:id="@+id/location_textView"
            android:text="@string/unset"
            style="@style/weather_header" />
        <TextView
            android:id="@+id/cloud_textView"
            android:text="@string/unset"
            style="@style/weather_header" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:id="@+id/wind_speed"
                    android:text="@string/wind"
                    style="@style/weather_data" />
                <TextView
                    android:id="@+id/humidity"
                    android:text="@string/humidity"
                    style="@style/weather_data" />
                <TextView
                    android:id="@+id/rain"
                    android:text="@string/rain"
                    style="@style/weather_data" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

                <TextView
                    android:id="@+id/wind_speed_textView"
                    android:text="@string/zero"
                    style="@style/weather_data" />
                <TextView
                    android:id="@+id/humidity_textView"
                    android:text="@string/zero"
                    style="@style/weather_data" />
                <TextView
                    android:id="@+id/rain_textView"
                    android:text="@string/zero"
                    style="@style/weather_data" />

            </LinearLayout>
        </RelativeLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/report_button"
            android:text="@string/report"
            android:height="45dp"
            android:textAlignment="center"
            android:background="#0000"
            android:drawableStart="@android:drawable/ic_dialog_info"
            android:drawableLeft="@android:drawable/ic_dialog_info"
            style="@style/weather_data"/>

    </LinearLayout>

</RelativeLayout>